--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -206,7 +206,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/signupBtnContainer"
+                android:id="@+id/signUpBtnContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -219,7 +219,7 @@
                     android:layout_weight="1" />
 
                 <android.support.v7.widget.AppCompatButton
-                    android:id="@+id/signupBtn"
+                    android:id="@+id/signUpBtn"
                     style="@style/AppTheme.NormalButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -242,7 +242,7 @@
                 android:paddingBottom="@dimen/lg_padding"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/signupBtnContainer">
+                app:layout_constraintTop_toBottomOf="@+id/signUpBtnContainer">
 
                 <android.support.v7.widget.AppCompatTextView
                     style="@style/AppTheme.TextAppearance"
