--- a/app/src/main/res/drawable/ic_view_tag.xml
+++ b/app/src/main/res/drawable/ic_view_tag.xml
@@ -2,20 +2,21 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--android:state_checked="false"-->
-    <item android:color="@color/colorPrimary" >
+    <!--<item android:color="@color/colorPrimary" >-->
+    <!--<shape>-->
+    <!--<stroke android:width="1dp" android:color="@color/lightgray" />-->
+    <!--<solid android:color="@color/white" />-->
+    <!--<corners android:radius="25dp" />-->
+    <!--</shape>-->
+    <!--</item>-->
+
+    <!--android:state_checked="true"-->
+    <item android:color="@color/white" >
         <shape>
-            <stroke android:width="1dp" android:color="@color/lightgray" />
-            <solid android:color="@color/white" />
+            <stroke android:width="1dp" android:color="@color/colorPrimary" />
+            <solid android:color="@color/colorPrimary" />
             <corners android:radius="25dp" />
         </shape>
     </item>
-
-    <!--<item android:color="@color/white" android:state_checked="true">-->
-        <!--<shape>-->
-            <!--<stroke android:width="1dp" android:color="@color/colorPrimary" />-->
-            <!--<solid android:color="@color/colorAccent" />-->
-            <!--<corners android:radius="25dp" />-->
-        <!--</shape>-->
-    <!--</item>-->
 
 </selector>
