--- a/app/src/main/res/layout/category_item_layout.xml
+++ b/app/src/main/res/layout/category_item_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -8,7 +7,7 @@
         android:id="@+id/category_toggle"
         style="@style/AppTheme.MainToggle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/recyclerviewTagHeight"
         android:layout_margin="@dimen/xxsm_margin"
         android:background="@drawable/ic_cat_tag_bg"
         android:maxLines="1"
